--- a/.github/workflows/python _script .yml
+++ b/.github/workflows/python _script .yml
@@ -24,4 +24,4 @@ jobs:
         pip install -r requirements.txt  # If you have dependencies
 
     - name: Python script
-      run: python main.py  
+      run: python script.py  
